// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <FootballPlayersWrapper /> fetching players: false renders the component 1`] = `
<div>
  <h2
    className="mb-2"
  >
    Football Player Finder
  </h2>
  <Connect(Filters) />
  <Connect(Table) />
</div>
`;

exports[`Component: <FootballPlayersWrapper /> fetching players: true renders the component 1`] = `
<div>
  <h2
    className="mb-2"
  >
    Football Player Finder
  </h2>
  <Connect(Filters) />
  <div
    className="text-center"
    id="fetchingPlayers"
  >
    Fetching players, please wait...
    <div
      className="mx-auto my-12 loader"
    />
  </div>
</div>
`;
